<resources>
    <string name="app_name">QuestionBank</string>
    <string name="title_subscribe">구독하기</string>
    <string name="title_myPage">마이</string>
    <string name="title_home">홈</string>
    <string name="title_video">해설영상</string>
    <string name="title_seeMore">더보기</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>