<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_subscribe"
        android:name="com.aoslec.questionbank.ui.subscribe.SubscirbeFragment"
        android:label="@string/title_subscribe"
        tools:layout="@layout/fragment_subscribe" />

    <fragment
        android:id="@+id/navigation_myPage"
        android:name="com.aoslec.questionbank.ui.subscribe.SubscirbeFragment"
        android:label="@string/title_myPage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aoslec.questionbank.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_video"
        android:name="com.aoslec.questionbank.ui.subscribe.SubscirbeFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/navigation_seeMore"
        android:name="com.aoslec.questionbank.ui.myPage.MyPageFragment"
        android:label="@string/title_seeMore"
        tools:layout="@layout/fragment_see_more" />
</navigation>